# CRUMBS

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  library.json  library.properties
.github/workflows/: ci.yml  doccheck.yml
_reference/: GOAL.md
cmake/: crumbsConfig.cmake.in
docs/: .indexignore  Doxyfile  README.md  TODO.md  api-reference.md  architecture-overview.md  architecture.md  character-usage-guide.md  crc.md  create-a-family.md  crumbs_planning.drawio  developer-guide.md  developer-notes.md  doxygen-style-guide.md  examples.md  future-ideas.md  getting-started.md  handler-guide.md  index.md  lhwit-family.md  linux-wire-install.md  linux.md  message-helpers.md  message-structure.md  platform-setup.md  platformio.md  protocol.md  roadmap.md  triple_display_rig.md  versioning.md
docs/archive/: crc.md  developer-notes.md
examples/: README.md
examples/arduino/display_controller/: display_controller.ino  display_status.ino  serial_io.ino
examples/arduino/display_controller_example/: display_controller_example.ino  display_status.ino  serial_io.ino
examples/arduino/display_peripheral/: crumbshandlers.ino  display_peripheral.ino  display_status.ino
examples/arduino/display_peripheral_example/: crumbshandlers.ino  display_peripheral_example.ino  display_status.ino
examples/arduino/handler_peripheral_example/: handler_peripheral_example.ino
examples/arduino/handler_peripheral_led/: handler_peripheral_led.ino  led_commands.h
examples/arduino/handler_peripheral_servo/: handler_peripheral_servo.ino  serial_io.ino  servo_commands.h
examples/arduino/simple_controller/: serial_io.ino  simple_controller.ino
examples/arduino/simple_controller_example/: serial_io.ino
examples/arduino/simple_peripheral/: simple_peripheral.ino
examples/arduino/simple_peripheral_example/: simple_peripheral_example.ino
examples/arduino/simple_peripheral_noncrumbs/: simple_peripheral_noncrumbs.ino
examples/arduino/triple_msgs/: README.md
examples/commands/: led_commands.h  servo_commands.h
examples/core_usage/: README.md
examples/core_usage/linux/mixed_bus_controller/: CMakeLists.txt  README.md  main.c
examples/core_usage/linux/simple_controller/: CMakeLists.txt  simple_linux_controller.c
examples/families_usage/: README.md
examples/families_usage/controller_discovery/: CMakeLists.txt  README.md  main.c
examples/families_usage/controller_manual/: CMakeLists.txt  README.md  config.h  main.c
examples/families_usage/discovery_controller/: CMakeLists.txt  README.md  main.c
examples/families_usage/discovery_controller-old/: main.c
examples/families_usage/lhwit_family/: README.md  calculator_ops.h  display_ops.h  led_ops.h  lhwit_ops.h  servo_ops.h
examples/families_usage/manual_controller/: CMakeLists.txt  README.md  config.h  main.c
examples/families_usage/manual_controller-old/: main.c
examples/follower_example/: follower_example.ino
examples/handlers/: README.md
examples/handlers/linux/multi_controller/: CMakeLists.txt  multi_controller.c
examples/handlers_usage/: README.md  mock_ops.h
examples/handlers_usage/linux/mock_controller/: CMakeLists.txt  mock_controller.c
examples/leader_example/: leader_example.ino  serial_io.ino
examples/linux/handler_controller/: handler_controller.c
examples/linux/interactive_controller/: CMakeLists.txt  interactive_controller.c
examples/linux/multi_handler_controller/: CMakeLists.txt  multi_handler_controller.c
examples/linux/simple_controller/: CMakeLists.txt  README.md  simple_linux_controller.c
examples/linux/simple_native_controller/: CMakeLists.txt  main.c
examples/master_example/: master_example.ino
examples/native/controller/: CMakeLists.txt  main.c
examples/platformio/: README.md
examples/platformio/controller/: platformio.ini
examples/platformio/handler_peripheral_led/: platformio.ini
examples/platformio/handler_peripheral_servo/: platformio.ini
examples/platformio/peripheral/: platformio.ini
examples/platformio/simple_controller/: platformio.ini
examples/platformio/simple_peripheral/: platformio.ini
examples/simple/controller_example/: controller_example.ino  serial_io.ino
examples/simple/peripheral_example/: peripheral_example.ino
examples/slice_example/: slice_example.ino
examples/triple_msgs/: README.md
examples/triple_msgs/controller_example/: controller_example.ino  display_status.ino  serial_io.ino
examples/triple_msgs/peripheral_example/: crumbshandlers.ino  display_status.ino  peripheral_example.ino
examples/triple_tester/: triple_tester.ino
examples/triple_tester/controller_example/: serial_io.ino
examples/triple_tester/peripheral_example/: peripheral_example.ino
examples/usage_families/: README.md
include/crumbs/: crumbs.h  crumbs_crc.h  crumbs_i2c.h  crumbs_message.h
scripts/: .gitignore  compare_crc8.py  doccheck.sh  generate_crc8.py  generate_crc8_arduino.py  generate_crc8_c99.py  simple.py  validate_and_stage_crc8.py
scripts/_test_acecrc_py/: compare_acecrc.py  compare_crc8.py  generate_crc8.py
scripts/arduino_crc8/: crc8_bit.cpp  crc8_bit.hpp  crc8_byte.cpp  crc8_byte.hpp  crc8_nibble.cpp  crc8_nibble.hpp  crc8_nibblem.cpp  crc8_nibblem.hpp
scripts/c99_crc8/: crc8_bit.c  crc8_bit.h  crc8_byte.c  crc8_byte.h  crc8_nibble.c  crc8_nibble.h  crc8_nibblem.c  crc8_nibblem.h
scripts/test_acecrc_py/: acecrc_generate.sh  generate.py  generate_all.py
src/: CRUMBS.cpp  CRUMBS.h  CRUMBSMessage.h  crumbs.h  crumbs_arduino.h  crumbs_crc.h  crumbs_i2c.h  crumbs_linux.h  crumbs_message.h  crumbs_message_helpers.h  crumbs_msg.h  crumbs_ops.h  crumbs_version.h
src/core/: crumbs_core.c  crumbs_i2c_helpers.c
src/crc/: crc8_nibble.c  crc8_nibble.h  crumbs_crc.c
src/crumbs/: crumbs_arduino.h
src_old/: CRUMBSMessage.h
tests/: test_common.h  test_context.c  test_crc_failure.c  test_encode_decode.c  test_handlers.c  test_i2c_helpers.c  test_msg_helpers.c  test_peripheral_flow.c  test_reply_flow.c  test_reply_handler.c  test_scan_fake.c  test_set_reply.c  test_version.c
(+87 files in other folders)
